@startuml
class Pizza {
    + void prepare()
    + void bake()
    + void cut()
    + void box()
}

class TACheessPizza extends Pizza {

}
class TAPepperPizza extends Pizza {
    
}
class LDCheessPizza extends Pizza {

}
class LDPepperPizza extends Pizza {
    
}
interface AbsFactory {
    + Pizza createPizza()
}


class TAFactory implements AbsFactory {

}
class LDFactory implements AbsFactory {
    
}

class OrderPizza {

}

OrderPizza o-- AbsFactory

TAFactory ..> TACheessPizza
TAFactory ..> TAPepperPizza

LDFactory ..> LDCheessPizza
LDFactory ..> LDPepperPizza
@enduml